fixed bug on about me page with the title being too big.

--- a/src/Components/Layout/css/Layout.css
+++ b/src/Components/Layout/css/Layout.css
@@ -140,7 +140,6 @@
 .Section-title {
     display: flex;
     min-height: calc(150px + 7vh);
-    height: 100%;
     width: 100vw;
     background-color: #8DAA9D;
     color: black;
@@ -211,5 +210,3 @@
         text-align: left;
     }
 }
-
-
